--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "gts": "^0.8.0",
     "hadouken-js-adapter": "^0.35.1-alpha.2",
     "jest": "^22.4.2",
+    "jest-util": "^23.4.0",
     "mini-css-extract-plugin": "^0.4.1",
     "moment": "^2.22.1",
     "react": "^16.2.0",
@@ -60,7 +61,7 @@
     "rimraf": "^2.6.2",
     "source-map-loader": "^0.2.3",
     "style-loader": "^0.21.0",
-    "ts-jest": "^22.4.1",
+    "ts-jest": "^23.10.4",
     "ts-loader": "^4.4.2",
     "typescript": "^3.1.1",
     "url-loader": "^1.0.1",
@@ -69,6 +70,7 @@
   },
   "jest": {
     "verbose": true,
+    "testURL": "http://localhost",
     "moduleFileExtensions": [
       "ts",
       "js"
